// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<App /> renders with modal and todocards 1`] = `
<Fragment>
  <Connect(Header) />
  <Connect(WithWidth(WithMobileDialog)) />
  <Connect(TodoCards) />
</Fragment>
`;

exports[`<App /> renders without crashing given props 1`] = `
<Fragment>
  <Connect(Header) />
  <EmptyCards />
</Fragment>
`;
